--- a/mesh-ca/cluster/cluster.yaml
+++ b/mesh-ca/cluster/cluster.yaml
@@ -30,7 +30,7 @@ spec:
   workloadIdentity:
     identityNamespace: default
   labels:
-    mesh_id: "[PROJECT_ID]__svc__id__goog" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"}]}}
+    mesh_id: "[PROJECT_ID]_us-central1-c_mesh-ca" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"mesh-ca"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
   loggingService: logging.googleapis.com/kubernetes
   monitoringService: monitoring.googleapis.com/kubernetes
   addonsConfig:
