--- a/mesh-ca/cluster/istio-operator.yaml
+++ b/mesh-ca/cluster/istio-operator.yaml
@@ -22,7 +22,7 @@ spec:
   tag: 1.4.2-asm.2
   values:
     global:
-      meshID: "[PROJECT_ID].svc.id.goog" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"}]}}
+      meshID: "[PROJECT_ID]_us-central1-c_mesh-ca" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"mesh-ca"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
       trustDomain: "[PROJECT_ID].svc.id.goog" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"}]}}
       controlPlaneSecurityEnabled: true
       mtls:
