--- a/mesh-ca/project/asm-sa.yaml
+++ b/mesh-ca/project/asm-sa.yaml
@@ -15,7 +15,7 @@
 apiVersion: iam.cnrm.cloud.google.com/v1alpha1
 kind: IAMServiceAccount
 metadata:
-  name: asm-sa # {"type":"string","x-kustomize":{"setter":{"name":"service-account","value":"asm-sa"}}}
+  name: anthos-svc-account # {"type":"string","x-kustomize":{"setter":{"name":"service-account","value":"anthos-svc-account"}}}
   namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
 spec:
   displayName: Anthos Service Mesh credentials
