--- a/asm/cluster/nodepool.yaml
+++ b/asm/cluster/nodepool.yaml
@@ -15,7 +15,7 @@
 apiVersion: container.cnrm.cloud.google.com/v1alpha2
 kind: ContainerNodePool
 metadata:
-  clusterName: "[PROJECT_ID]/us-central1-c/mesh-ca" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"mesh-ca"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
+  clusterName: "[PROJECT_ID]/us-central1-c/asm" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"asm"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
   name: default-pool
   namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
 spec:
@@ -46,4 +46,4 @@ spec:
     autoRepair: true
     autoUpgrade: true
   clusterRef:
-    name: mesh-ca # {"type":"string","x-kustomize":{"setter":{"name":"cluster-name","value":"mesh-ca"}}}
+    name: asm # {"type":"string","x-kustomize":{"setter":{"name":"cluster-name","value":"asm"}}}
