--- a/asm/cluster/nodepool.yaml
+++ b/asm/cluster/nodepool.yaml
@@ -26,7 +26,7 @@ spec:
   nodeConfig:
     diskSizeGb: 100
     diskType: pd-standard
-    machineType: n1-standard-4
+    machineType: e2-standard-4
     preemptible: false
     oauthScopes:
     - "https://www.googleapis.com/auth/cloud-platform"
