--- a/asm/project/enable-services.yaml
+++ b/asm/project/enable-services.yaml
@@ -17,7 +17,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: monitoring
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: monitoring.googleapis.com
 ---
@@ -26,7 +26,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: compute
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: compute.googleapis.com
 ---
@@ -35,7 +35,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: gke
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: container.googleapis.com
 ---
@@ -44,7 +44,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: iamcredentials
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: iamcredentials.googleapis.com
 ---
@@ -53,7 +53,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshca
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: meshca.googleapis.com
 ---
@@ -62,6 +62,6 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshtelemetry
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: meshtelemetry.googleapis.com
