--- a/asm/project/asm-sa.yaml
+++ b/asm/project/asm-sa.yaml
@@ -16,7 +16,7 @@ apiVersion: iam.cnrm.cloud.google.com/v1alpha1
 kind: IAMServiceAccount
 metadata:
   name: anthos-svc-account # {"type":"string","x-kustomize":{"setter":{"name":"service-account","value":"anthos-svc-account"}}}
-  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   displayName: Anthos Service Mesh credentials
   projectRoles:
