--- a/asm/project/enable-services.yaml
+++ b/asm/project/enable-services.yaml
@@ -65,3 +65,12 @@ metadata:
   namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
   service: meshtelemetry.googleapis.com
+---
+# Mesh Config
+apiVersion: cnrm.cloud.google.com/v1alpha1
+kind: CloudService
+metadata:
+  name: meshconfig
+  namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
+spec:
+  service: meshconfig.googleapis.com
