--- a/asm/project/enable-services.yaml
+++ b/asm/project/enable-services.yaml
@@ -16,10 +16,10 @@
 apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
-  name: monitoring
+  name: stackdriver
   namespace: "[PROJECT_ID]" # {"type":"string","x-kustomize":{"setter":{"name":"project-id"}}}
 spec:
-  service: monitoring.googleapis.com
+  service: stackdriver.googleapis.com
 ---
 # GCE
 apiVersion: cnrm.cloud.google.com/v1alpha1
