Bring back loggingService and monitoringService

--- a/asm/cluster/cluster.yaml
+++ b/asm/cluster/cluster.yaml
@@ -31,7 +31,9 @@ spec:
     identityNamespace: default
   labels:
     mesh_id: "[PROJECT_ID]_us-central1-c_asm" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"project-id","value":"[PROJECT_ID]"},{"name":"cluster-name","value":"asm"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
-
+  loggingService: logging.googleapis.com/kubernetes
+  monitoringService: monitoring.googleapis.com/kubernetes
+  
   # These settings may be necessary if you use non-default VPC settings.
   # network: default
   # subnetwork: default
