--- a/asm/project/asm-sa.yaml
+++ b/asm/project/asm-sa.yaml
@@ -23,3 +23,4 @@ spec:
   - roles/logging.logWriter
   - roles/monitoring.metricWriter
   - roles/meshtelemetry.reporter
+  - roles/cloudtrace.agent
