--- a/asm/cluster/nodepool.yaml
+++ b/asm/cluster/nodepool.yaml
@@ -24,6 +24,8 @@ spec:
     minNodeCount: 2
     maxNodeCount: 4 # {"type":"integer","x-kustomize":{"setter":{"name":"max-nodes","value":"4"}}}
   nodeConfig:
+    metadata:
+      disable-legacy-endpoints: "true"
     machineType: e2-standard-4
     workloadMetadataConfig:
       nodeMetadata: GKE_METADATA_SERVER
