--- a/asm/cluster/cluster.yaml
+++ b/asm/cluster/cluster.yaml
@@ -27,11 +27,24 @@ metadata:
   namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
 spec:
   location: us-central1-c # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.compute.zone"}}}
+  minMasterVersion: "GKE_CLUSTER_VERSION" # {"type":"string","x-kustomize":{"setter":{"name":"anthos.gke_cluster.version"}}}
   workloadIdentity:
     identityNamespace: default
   labels:
-    mesh_id: "proj-PROJECT_NUMBER" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.project.projectNumber","value":"PROJECT_NUMBER"}]}}
+    mesh_id: "CLUSTER_MESH_ID" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"anthos.cluster.mesh_id","value":"CLUSTER_MESH_ID"}]}}
+    created-for-anthos-sample-deployment: "RELEASE_DATE" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"anthos.sample.deployment.release_date","value":"RELEASE_DATE"}]}}
   loggingService: logging.googleapis.com/kubernetes
   monitoringService: monitoring.googleapis.com/kubernetes
+  addonsConfig:
+    horizontalPodAutoscaling:
+      disabled: false
+    httpLoadBalancing:
+      disabled: false
+    cloudrunConfig:
+      disabled: true
+  ipAllocationPolicy:
+    useIpAliases: true
+  masterAuth:
+    username: admin
   network: default
   subnetwork: default
