--- a/asm/project/enable-services.yaml
+++ b/asm/project/enable-services.yaml
@@ -17,7 +17,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: stackdriver
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: stackdriver.googleapis.com
 ---
@@ -26,7 +26,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: compute
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: compute.googleapis.com
 ---
@@ -35,7 +35,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: gke
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: container.googleapis.com
 ---
@@ -44,7 +44,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: iamcredentials
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: iamcredentials.googleapis.com
 ---
@@ -53,7 +53,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshca
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: meshca.googleapis.com
 ---
@@ -62,7 +62,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshtelemetry
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: meshtelemetry.googleapis.com
 ---
@@ -71,7 +71,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshconfig
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: meshconfig.googleapis.com
 ---
@@ -80,6 +80,6 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: anthos
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   service: anthos.googleapis.com
