--- a/asm/cluster/cluster.yaml
+++ b/asm/cluster/cluster.yaml
@@ -35,3 +35,5 @@ spec:
   monitoringService: monitoring.googleapis.com/kubernetes
   network: default
   subnetwork: default
+  releaseChannel:
+    channel: REGULAR
