--- a/asm/cluster/cluster.yaml
+++ b/asm/cluster/cluster.yaml
@@ -47,5 +47,6 @@ spec:
     useIpAliases: true
   masterAuth:
     username: admin
-  network: default
-  subnetwork: default
+  network: default  # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.compute.network"}}}
+  subnetwork: default # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.compute.subnetwork"}}}
+
