--- a/asm/cluster/cluster.yaml
+++ b/asm/cluster/cluster.yaml
@@ -23,7 +23,7 @@ spec:
     horizontalPodAutoscaling:
       disabled: false
     httpLoadBalancing:
-      disabled: false
+      disabled: true
     cloudrunConfig:
       disabled: true # {"$ref:","#/definitions/io.k8s.cli.setters.cloudrun-config-disabled"}
   ipAllocationPolicy:
